# parallel-and-distributed

./: README.md
cuda/: CMakeLists.txt
cuda/include/: CommonKernels.cuh  CosineVector.cuh  Filter.cuh  KernelAdd.cuh  KernelMatrixAdd.cuh  KernelMul.cuh  MatrixMul.cuh  MatrixVectorMul.cuh  ScalarMul.cuh  ScalarMulRunner.cuh
cuda/runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu  07-matrix-mul.cu  08-filter.cu  plot.py  run_all.cu
cuda/src/: CommonKernels.cu  CosineVector.cu  Filter.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu
hdfs/hdfstask1/: find.py  parse.py  run.sh
hdfs/hdfstask2/: run.sh
hdfs/hdfstask3/: extract.py  run.sh
hdfs/hdfstask4/: parse.py  run.sh
hive/hivetask1/: create.sql
hive/hivetask2/: query.sql  run.sh
hive/hivetask3/: query.sql
hive/hivetask4/: query.sql  reverse.py
mapreduce/mapreducetask1/: mapper.py  reducer.py  run.sh
mpi/: README.md  plot.py  run.c  stat.txt  task_1.c
pdspark/pdsparktask1/: count.py  run.sh
pdspark/pdsparktask2/: main.py  run.sh
